<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/introbacground"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/clean_img"
            android:layout_width="200dp"
            android:layout_marginBottom="30dp"
            android:layout_height="200dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textIsSelectable="false"
            android:text="@string/clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
       <TextView
           android:textIsSelectable="false"
           android:textSize="20dp"
           android:layout_marginTop="10dp"
           android:layout_gravity="center"
           android:gravity="center"
           android:paddingLeft="30dp"
           android:paddingRight="30dp"
           android:textColor="@color/colorPrimaryDark"
           android:textStyle="normal"
           android:text="@string/cleantext"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
        <TextView
            android:textIsSelectable="false"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal"
            android:text="@string/cleantext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>