<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_car_wash_booking_confirmation"
    android:background="@drawable/background"
    android:layout_marginTop="56dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookingconfirmation.Car_Wash_Booking_Confirmation">
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="@color/white"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="6dp"
            android:text="@string/bookingconfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/clickconfirmbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/white"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/bookingdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/white"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:layout_marginTop="1dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="19.6.2016"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/white"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/bookingtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/white"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:layout_marginTop="1dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="10:55 AM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/white"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>

    </LinearLayout>
        <ImageView
            android:background="@drawable/interiorcleaningicon"
            android:layout_width="80dp"
            android:layout_height="80dp" />
        <TextView
            android:layout_marginTop="2dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/carexteriorpolish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rightarrowicon"
                    android:layout_width="10dp"
                    android:layout_height="20dp" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/servicesrendered"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rightarrowicon"
                    android:layout_width="10dp"
                    android:layout_height="20dp" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:text="@string/servicing"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:textColor="@color/white"
                        android:text="@string/servicingtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rightarrowicon"
                    android:layout_width="10dp"
                    android:layout_height="20dp" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/extranotes"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:textColor="@color/white"
                        android:text="@string/extranotestext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
