<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hedgehog="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_rating"
    android:background="@drawable/background"
    android:layout_marginTop="56dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rating.Rating">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
     <TextView
         android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20dp"
         android:text="@string/review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/reviewtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <ImageView
            android:id="@+id/thubanimation"
            android:background="@drawable/thum_icon"
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:visibility="visible"
            android:layout_height="100dp" />
        <ImageView
            android:id="@+id/thubanimation2"
            android:background="@drawable/thum_icon"
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:rotation="180"
            android:visibility="gone"
            android:layout_height="100dp" />
        <TextView
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/experiencetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.hedgehog.ratingbar.RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            hedgehog:clickable="true"
            hedgehog:halfstart="true"
            hedgehog:starCount="5"
            hedgehog:starEmpty="@mipmap/star_empty"
            hedgehog:starFill="@mipmap/star_fully"
            hedgehog:starHalf="@mipmap/star_halff"
            hedgehog:starImageHeight="30dp"
            hedgehog:starImageWidth="45dp"
            hedgehog:starImagePadding="4dp"/>
        <LinearLayout
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:background="@color/white"
                android:layout_width="80dp"
                android:layout_height="1dp"/>
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:background="@color/white"
                android:layout_width="80dp"
                android:layout_height="1dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
        <EditText
            android:background="@color/white"
            android:inputType="textMultiLine"
            android:id="@+id/feedbackedittext"
            android:gravity="top|left"
            android:lines="20"
            android:minLines="5"
            android:textColorHint="@color/cardview_dark_background"
            android:hint="@string/experiencesharetext"
            android:textColor="@color/cardview_dark_background"
            android:padding="6dp"
            android:textSize="14dp"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:layout_width="match_parent"
            android:layout_height="70dp" />
            </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
